# ankix

./: .gitattributes  .gitignore  README.md  database_viewer.ipynb  example.ipynb  pyproject.toml
ankix/: __init__.py  ankix.py  config.py  convert.py  db.py  jupyter.py  main.py  migration.py  preview.py  util.py
dev/: collection.anki2  do_convert.py  do_extract.py  do_sample.py  sample.json  test_regex.py
sample/: chinese.ipynb  database_viewer.ipynb  edit_css.ipynb  example.ipynb
