[tool.poetry]
name = "ankix"
version = "0.2"
description = "New file format for Anki with improved review intervals and Peewee SQLite powered"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["datauri/**/*.py"]
repository = "https://github.com/patarapolw/ankix"
homepage = "https://github.com/patarapolw/ankix"
keywords = ["anki", "spaced-repetition", "SRS"]

[tool.poetry.dependencies]
python = "*"
peewee = "^3.7"
tqdm = "^4.27"
mistune = "^0.8.4"
pytimeparse = "^1.1"
python-magic = "^0.4.15"

[tool.poetry.dev-dependencies]
htmlviewer = "^0.1.7"
